--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Jerrytime.biz Homepage</h1>
+<p>This is the placeholder page for those seeking ultimate relaxation and self-realization.</p>
+<p>A time best referred to as "JerryTime"</p>
