--- a/app/views/static_pages/resume.html.erb
+++ b/app/views/static_pages/resume.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#resume</h1>
-<p>Find me in app/views/static_pages/resume.html.erb</p>
+<h1>My Resume</h1>
+<a href="https://www.linkedin.com/in/jeremysearls/">LinkedIn</a>
