--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,6 @@
+<% provide(:title, "Home") %>
 <h1>Jerrytime.biz Homepage</h1>
-<p>This is the placeholder page for those seeking ultimate relaxation and self-realization.</p>
-<p>A time best referred to as "JerryTime"</p>
+<p>
+This is the placeholder page for those seeking ultimate relaxation and self-realization.
+A time best referred to as "JerryTime"
+</p>
